[project]
name = "yolo-ex"
version = "0.1.0"
description = "yolo model export tool"
readme = "README.md"
authors = [{ name = "Luis Maya Aranda", email = "nonfatmatcha@gmail.com" }]
requires-python = ">=3.10,<3.11"
dependencies = [
    "ultralytics==8.4.14",
    "coremltools; sys_platform == 'darwin'",
    "torch==2.7.0; sys_platform == 'darwin'",
    "torchvision==0.22.0; sys_platform == 'darwin'",
    "torch @ https://github.com/ultralytics/assets/releases/download/v0.0.0/torch-2.5.0a0+872d972e41.nv24.08-cp310-cp310-linux_aarch64.whl ; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "torchvision @ https://github.com/ultralytics/assets/releases/download/v0.0.0/torchvision-0.20.0a0+afc54f7-cp310-cp310-linux_aarch64.whl ; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "tensorrt-cu12-bindings==10.7.0.post1; sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[project.scripts]
yolo-ex = "yolo_ex.cli:main"
yolo-ex-platform = "yolo_ex.platform_cli:main"

[dependency-groups]
dev = ["mypy", "pytest", "ruff"]

[tool.uv.build-backend]
module-name = "yolo_ex"
module-root = "src"


[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"
